--- a/src/pages/error.css
+++ b/src/pages/error.css
@@ -65,3 +65,16 @@ a.button-error:hover {
     border-radius: 20px;
     transition: 0.2s;
 }
+
+/* cellphones and tablets */
+@media screen and (max-width: 768px) {
+    .error-container {
+        width: 80vw;
+        height: 65vh;
+        padding: 0 10px;
+    }
+    
+    .error-texts h1 {
+        font-size: 50px;
+    }
+}
